Ajout des sources

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         <div class="arrow"><i class="fa-solid fa-arrow-right fa-rotate-90"></i></div>
 
         <a href="mentionslegales.html" class="ml">Accéder à la page des mentions légales</a>
-    
+        <a href="src.html" class="src">Accéder à la page des sources</a> <br><br>
+
+        <p>Site Databstention créé par Justine, Laure et Ramata</p>
     </section>
 
     <section class="definition">
