--- a/mentionslegales.html
+++ b/mentionslegales.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="mentionslegales.css">
+    
+    <!--FONT AWESOME-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Mentions Légales - Databstention</title>
 </head>
 <body>
+
     <div>
-        
+        <a href="index.html" class="return"><i class="fa-solid fa-angle-left"></i> Retourner à la page d'accueil</a>
+
     <h1>Mentions légales</h1>
 
     <h2>Éditeur du site</h2>
@@ -73,7 +81,7 @@
     <p>Databstention s'engage à respecter la vie privée de ses utilisateurs:  </p>
     <ul>
         <li>Ce site ne collecte, ne traite, ni ne stocke aucune donnée personnelle identifiable (nom, adresse e-mail, etc.) sans consentement préalable.</li>
-        <li>En cas de nécessité pour une fonctionnalité particulière, l'utilisateur sera informé explicitement, et son consentement sera requis avant toute collecte.</li>
+        <li>En cas de nécessité pour une fonctionnalité particulière, l'utilisateur sera informé explicitement et son consentement sera requis avant toute collecte.</li>
     </ul>
     <p>En l’absence de consentement explicite,  aucune donnée ne sera enregistrée.</p><br>
 
