texte aujourd'hui ?

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
     <section class="today">
         <div class="txt-today">
             <h2>Et aujourd'hui ?</h2>
-            <p>La victoire du Rassemblement National aux élections européennes de 2024 a poussé Emmanuel Macron à dissoudre l'Assemblée Nationale, une mesure inédite depuis 1997. 
-            Face à la montée de l'extrême droite et à une polarisation croissante, de plus en plus de citoyens, surtout parmi les jeunes, choisissent de ne pas voter, ce qui illustre une fracture entre les électeurs et les institutions politiques.</p>
+            <p>La victoire du Rassemblement National aux élections européennes de 2024 a été un tournant significatif, illustrant la poussée de l'extrême droite en France et une division croissante au sein de l'électorat. Ce résultat a accentué le sentiment de déconnexion des électeurs avec les partis traditionnels, incitant Emmanuel Macron à prendre une mesure exceptionnelle : la dissolution de l’Assemblée nationale. <br> <br> 
+Cette décision est une réponse à la crise politique, cherchant à redonner une légitimité démocratique en permettant aux Français de se prononcer à nouveau sur leurs représentants. Cette action est aussi perçue comme un moyen de restaurer un équilibre politique et de renouveler les mandats à un moment de tensions intenses.</p>
         </div>
         <div class="img-today">
             <img src="img/fists.png" alt="">
